# Copyright (C) Seiko Epson Corporation 2015.

qmsdir = @prefix@/resource/Languages
qms_DATA = \
	utilitytr_de.qm \
	utilitytr_es.qm \
	utilitytr_fr.qm \
	utilitytr_it.qm \
	utilitytr_ja.qm \
	utilitytr_ko.qm \
	utilitytr_nl.qm \
	utilitytr_pt.qm \
	utilitytr_ru.qm \
	utilitytr_zh_CN.qm \
	utilitytr_zh_TW.qm
